--- a/RoastMe/packages.config
+++ b/RoastMe/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net46" />
   <package id="Chronic.Signed" version="0.3.2" targetFramework="net46" />
+  <package id="Flurl" version="2.5.0" targetFramework="net46" />
+  <package id="Flurl.Http" version="2.0.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
