--- a/RoastMe/RoastMe.csproj
+++ b/RoastMe/RoastMe.csproj
@@ -130,6 +130,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\FaceAnalizer.cs" />
     <Compile Include="Controllers\FaceConnector.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
     <Compile Include="Controllers\WatsonService.cs" />
