--- a/RoastMe/packages.config
+++ b/RoastMe/packages.config
@@ -16,6 +16,7 @@
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net46" />
   <package id="Microsoft.ProjectOxford.Common" version="1.0.324" targetFramework="net46" />
   <package id="Microsoft.ProjectOxford.Face" version="1.3.0" targetFramework="net46" />
+  <package id="Microsoft.ProjectOxford.Vision" version="1.0.393" targetFramework="net46" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.2" targetFramework="net46" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net46" />
