--- a/RoastMe/Web.config
+++ b/RoastMe/Web.config
@@ -4,6 +4,10 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <appSettings>
     <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
     <add key="BotId" value="Roast Me" />
@@ -21,7 +25,7 @@
       </system.Web>
   -->
   <system.web>
-    <customErrors mode="Off" /> 
+    <customErrors mode="Off" />
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
   </system.web>
@@ -32,13 +36,13 @@
         <add value="default.htm" />
       </files>
     </defaultDocument>
-    
-  <handlers>
+    <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -71,4 +75,14 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+<connectionStrings><add name="RoastMeDbEntities" connectionString="metadata=res://*/Data.Model1.csdl|res://*/Data.Model1.ssdl|res://*/Data.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:roastmedb.database.windows.net,1433;initial catalog=RoastMeDb;user id=roaster;password=CharlieSh33n;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="RoastMeDbEntities1" connectionString="metadata=res://*/Data.RoastMeModel.csdl|res://*/Data.RoastMeModel.ssdl|res://*/Data.RoastMeModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:roastmedb.database.windows.net,1433;initial catalog=RoastMeDb;user id=roaster;password=CharlieSh33n;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
